force-app/main/default/objects/Risk_Profile_Component__c/Risk_Profile_Component__c.object-meta.xml
<CustomObject>
    <label>Risk Profile Component</label>
    <nameField>
        <displayFormat>RP-CMP-{000000}</displayFormat>
        <label>Risk Profile Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Profile Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>