force-app/main/default/objects/Risk_Profile_Component__c/fields/Bundle_Components_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Components_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Components Allocation</label>
    <referenceTo>Bundle_Components_Allocation__c</referenceTo>
    <relationshipLabel>Risk Profile Components</relationshipLabel>
    <relationshipName>Risk_Profile_Components</relationshipName>
    <type>Lookup</type>
</CustomField>