force-app/main/default/objects/Risk_Profile_Component__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <formula>Bundle_Components_Allocation__r.Component_sku_Parsed__c</formula>
    <label>Component Name</label>
    <type>Text</type>
</CustomField>