force-app/main/default/objects/Risk_Profile_Component__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Risk Profile Components</relationshipLabel>
    <relationshipName>Risk_Profile_Components</relationshipName>
    <type>Lookup</type>
</CustomField>