force-app/main/default/objects/Risk_Profile_Component__c/fields/Product_SKU_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU_Name__c</fullName>
    <formula>Bundle_Components_Allocation__r.Product_SKU__c</formula>
    <label>Product SKU Name</label>
    <type>Text</type>
</CustomField>