force-app/main/default/objects/Risk_Profile_Component__c/fields/Risk_Profile__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile__c</fullName>
    <label>Risk Profile</label>
    <referenceTo>Risk_Profile__c</referenceTo>
    <relationshipLabel>Risk Profile Components</relationshipLabel>
    <relationshipName>Risk_Profile_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>