force-app/main/default/objects/Risk_Profile_Component__c/fields/Risk_Profile_Entitlement_Product__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile_Entitlement_Product__c</fullName>
    <formula>Risk_Profile__r.Entitlement__r.Product__r.ProductCode</formula>
    <label>Risk Profile Entitlement Product</label>
    <type>Text</type>
</CustomField>